--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ico/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000000" />
     <title>Ваші меблі</title>
+    <link rel="apple-touch-icon" href="/ico/192.png" />
+ 
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
     <div id="root"></div>
